--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,15 @@ javafx {
     modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.11'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.mockito:mockito-inline:4.+'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.+'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.6'
     implementation group: 'org.pdfsam.rxjava3', name: 'rxjavafx', version: '3.0.2'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '1.4'
