--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:4.+'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation group: 'com.google.inject', name: 'guice', version: '5.0.1'
     implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.6'
     implementation group: 'org.pdfsam.rxjava3', name: 'rxjavafx', version: '3.0.2'
-    implementation group: 'org.apache.tika', name: 'tika-core', version: '1.4'
-    implementation group: 'org.json', name: 'json', version: '20200518'
 }
