--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ test {
 }
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'org.mockito:mockito-inline:4.+'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.+'
