--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation group: 'com.google.inject', name: 'guice', version: '5.0.1'
     implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.6'
     implementation group: 'org.pdfsam.rxjava3', name: 'rxjavafx', version: '3.0.2'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
